# python-campusnet

./: .gitignore  CampusNet.py  README.md  Readme.md  campusnet.py  print_exams_as_table.py  requirements.txt  setup.cfg
.github/workflows/: docker-publish.yml
grades-docker/: Dockerfile  Readme.md  entrypoint.sh  grades.sh
src/campusnet/: __init__.py  __main__.py
utils/: print_exams_as_table.py
