[metadata]
name = campusnet
description = Python Package to interface with CampusNet by Datenlotsen. 
author = CS-Studis
license = GPL-3.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    campusnet
install_requires =
    requests>=2
    beautifulsoup4>=4
    tabulate>=0.8
python_requires = >=3.7
package_dir =
    =src
zip_safe = no
